--- a/Footinder/packages.config
+++ b/Footinder/packages.config
@@ -26,6 +26,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.8.3" targetFramework="net45" />
+  <package id="mongocsharpdriver" version="1.10.0" targetFramework="net45" />
   <package id="MsieJavaScriptEngine" version="1.5.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
   <package id="React.Core" version="1.3.0" targetFramework="net45" />
