--- a/Footinder/Footinder.csproj
+++ b/Footinder/Footinder.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClearScript">
+      <HintPath>..\packages\JavaScriptEngineSwitcher.V8.1.2.1\lib\net40\ClearScript.dll</HintPath>
+    </Reference>
     <Reference Include="JavaScriptEngineSwitcher.Core">
       <HintPath>..\packages\JavaScriptEngineSwitcher.Core.1.2.0\lib\net40\JavaScriptEngineSwitcher.Core.dll</HintPath>
     </Reference>
@@ -47,6 +50,9 @@
     </Reference>
     <Reference Include="JavaScriptEngineSwitcher.Msie">
       <HintPath>..\packages\JavaScriptEngineSwitcher.Msie.1.2.0\lib\net40\JavaScriptEngineSwitcher.Msie.dll</HintPath>
+    </Reference>
+    <Reference Include="JavaScriptEngineSwitcher.V8">
+      <HintPath>..\packages\JavaScriptEngineSwitcher.V8.1.2.1\lib\net40\JavaScriptEngineSwitcher.V8.dll</HintPath>
     </Reference>
     <Reference Include="Jint">
       <HintPath>..\packages\JavaScriptEngineSwitcher.Jint.1.2.1\lib\net40\Jint.dll</HintPath>
@@ -69,6 +75,9 @@
     </Reference>
     <Reference Include="React">
       <HintPath>..\packages\React.Core.1.3.0\lib\net40\React.dll</HintPath>
+    </Reference>
+    <Reference Include="React.JavaScriptEngine.ClearScriptV8">
+      <HintPath>..\packages\React.JavaScriptEngine.ClearScriptV8.1.3.0\lib\net40\React.JavaScriptEngine.ClearScriptV8.dll</HintPath>
     </Reference>
     <Reference Include="React.Web">
       <HintPath>..\packages\React.Web.1.3.0\lib\net40\React.Web.dll</HintPath>
@@ -174,6 +183,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ClearScript.V8\ClearScriptV8-32.dll" />
+    <Content Include="ClearScript.V8\ClearScriptV8-64.dll" />
+    <Content Include="ClearScript.V8\v8-ia32.dll" />
+    <Content Include="ClearScript.V8\v8-x64.dll" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -245,7 +258,9 @@
     <Content Include="Views\Shared\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Scripts\decisions.jsx" />
+    <Content Include="Scripts\decisions.jsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Views\Decisions\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
