--- a/Footinder/packages.config
+++ b/Footinder/packages.config
@@ -4,6 +4,7 @@
   <package id="JavaScriptEngineSwitcher.Core" version="1.2.0" targetFramework="net45" />
   <package id="JavaScriptEngineSwitcher.Jint" version="1.2.1" targetFramework="net45" />
   <package id="JavaScriptEngineSwitcher.Msie" version="1.2.0" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.V8" version="1.2.1" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
@@ -30,6 +31,7 @@
   <package id="MsieJavaScriptEngine" version="1.5.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
   <package id="React.Core" version="1.3.0" targetFramework="net45" />
+  <package id="React.JavaScriptEngine.ClearScriptV8" version="1.3.0" targetFramework="net45" />
   <package id="React.Web" version="1.3.0" targetFramework="net45" />
   <package id="React.Web.Mvc4" version="1.3.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
