--- a/Footinder/Footinder.csproj
+++ b/Footinder/Footinder.csproj
@@ -165,6 +165,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DecisionsController.cs" />
     <Compile Include="Controllers\RestaurantsController.cs" />
+    <Compile Include="DataAccess\RestaurantsRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
