take connection string from web config

--- a/Footinder/Web.config
+++ b/Footinder/Web.config
@@ -18,7 +18,7 @@
 <!--  </connectionStrings>-->
 
   <connectionStrings>
-    <add name="mongodb" connectionString="mongodb://lunch:po09!@QW@ds041851.mongolab.com:41851/lunch" />
+    <add name="mongodb" connectionString="mongodb://lunchuser:supersecure@ds041851.mongolab.com:41851/lunch" />
   </connectionStrings>
   
   <appSettings>
