Show pictures and decide

--- a/Footinder/Web.config
+++ b/Footinder/Web.config
@@ -167,7 +167,9 @@
 			     be allowed in shared hosting environments. -->
 			<!--<servicePointManager checkCertificateRevocationList="true"/>-->
 		</settings>
-	</system.net><dotNetOpenAuth>
+	</system.net>
+  
+  <dotNetOpenAuth>
 		<messaging>
 			<untrustedWebRequest>
 				<whitelistHosts>
@@ -197,6 +199,5 @@
 		     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
 		<idn enabled="All" />
 		<iriParsing enabled="true" />
-	</uri></configuration>
-			<add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" /><add name="V8JsEngine" type="JavaScriptEngineSwitcher.V8.V8JsEngine, JavaScriptEngineSwitcher.V8" /></engines>
-		</core></jsEngineSwitcher></configuration>
+	</uri>
+</configuration>
