--- a/Footinder/Footinder.csproj
+++ b/Footinder/Footinder.csproj
@@ -202,8 +202,11 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DecisionsController.cs" />
     <Compile Include="Controllers\RestaurantsController.cs" />
+    <Compile Include="Controllers\VotingController.cs" />
+    <Compile Include="DataAccess\RepositoryFactory.cs" />
     <Compile Include="DataAccess\RestaurantsRepository.cs" />
     <Compile Include="BuisnessLogic\LunchGroupsDecider.cs" />
+    <Compile Include="DataAccess\VotingRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -297,6 +300,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Voting\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
