--- a/Footinder/Footinder.csproj
+++ b/Footinder/Footinder.csproj
@@ -201,6 +201,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DecisionsController.cs" />
+    <Compile Include="Controllers\LunchGroupController.cs" />
     <Compile Include="Controllers\RestaurantsController.cs" />
     <Compile Include="DataAccess\RestaurantsRepository.cs" />
     <Compile Include="BuisnessLogic\LunchGroupsDecider.cs" />
@@ -294,6 +295,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\Decisions\Index.cshtml" />
+    <Content Include="Views\LunchGroup\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
