--- a/Footinder/Footinder.csproj
+++ b/Footinder/Footinder.csproj
@@ -201,6 +201,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DecisionsController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\LunchGroupController.cs" />
     <Compile Include="Controllers\RestaurantsController.cs" />
     <Compile Include="Controllers\VoteController.cs" />
@@ -300,6 +301,8 @@
     </Content>
     <Content Include="Views\Decisions\Index.cshtml" />
     <Content Include="Views\LunchGroup\Index.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Scripts\login.jsx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
