--- a/Footinder/Footinder.csproj
+++ b/Footinder/Footinder.csproj
@@ -253,9 +253,11 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <None Include="Lib\jquery-1.8.2.intellisense.js" />
+    <Content Include="Images\loginbg.png" />
     <Content Include="Lib\jquery-1.8.2.js" />
     <Content Include="Lib\jquery-1.8.2.min.js" />
     <Content Include="Lib\_references.js" />
+    <Content Include="Style\login.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
