--- a/Footinder/Footinder.csproj
+++ b/Footinder/Footinder.csproj
@@ -255,6 +255,7 @@
     <None Include="Lib\jquery-1.8.2.intellisense.js" />
     <Content Include="Images\loginbg.png" />
     <Content Include="Images\no.svg" />
+    <Content Include="Images\Soluto.ico" />
     <Content Include="Images\yes.svg" />
     <Content Include="Lib\jquery-1.8.2.js" />
     <Content Include="Lib\jquery-1.8.2.min.js" />
